--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "react-dev-utils": "^4.0.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-select": "^1.0.0-rc.8",
     "redux": "^3.7.2",
     "redux-saga": "^0.15.6",
     "reselect": "^3.0.1",
+    "selectn": "^1.1.2",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
