--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
     "extract-text-webpack-plugin": "3.0.0",
+    "fetch-mock": "^5.12.2",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
@@ -39,6 +40,7 @@
     "react-select": "^1.0.0-rc.8",
     "redux": "^3.7.2",
     "redux-saga": "^0.15.6",
+    "redux-saga-tester": "^1.0.352",
     "reselect": "^3.0.1",
     "serve": "^6.0.6",
     "style-loader": "0.18.2",
